syntax = "proto3";

package product;
option go_package = "/product";

service ProductService {
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
}

message ListProductsRequest {
  string category = 1;
}

message ListProductsResponse {
  repeated Product products = 1;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  int64 price = 4;
  int32 stock = 5;
}
